--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dotenv = "0.15"
 chrono = "0.4"
+rusqlite = { version = "0.29", features = ["bundled"] }
+zip = "0.5"
+quick-xml = "0.24"
